; ModuleID = '/home/carl/AnghaBench/radare2/libr/asm/arch/hexagon/gnu/extr_hexagon-opc.c_hexagon_extract_predicate_operand.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/asm/arch/hexagon/gnu/extr_hexagon-opc.c_hexagon_extract_predicate_operand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @hexagon_extract_predicate_operand(i32* %0, i32 %1, i8* %2, i32* %3, i8** %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i8**, align 8
  %12 = alloca [100 x i8], align 16
  %13 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i32 %1, i32* %8, align 4
  store i8* %2, i8** %9, align 8
  store i32* %3, i32** %10, align 8
  store i8** %4, i8*** %11, align 8
  %14 = load i32*, i32** %7, align 8
  %15 = load i32, i32* %8, align 4
  %16 = load i8*, i8** %9, align 8
  %17 = getelementptr inbounds [100 x i8], [100 x i8]* %12, i64 0, i64 0
  %18 = load i8**, i8*** %11, align 8
  %19 = call i32 @hexagon_dis_operand(i32* %14, i32 %15, i32 0, i32 0, i8* %16, i8* %17, i8** %18)
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %23, label %21

21:                                               ; preds = %5
  %22 = load i32, i32* @FALSE, align 4
  store i32 %22, i32* %6, align 4
  br label %36

23:                                               ; preds = %5
  %24 = load i32*, i32** %7, align 8
  %25 = load i32, i32* %8, align 4
  %26 = load i8*, i8** %9, align 8
  %27 = load i8**, i8*** %11, align 8
  %28 = call i32 @hexagon_extract_operand(i32* %24, i32 %25, i32 0, i8* %26, i32* %13, i8** %27)
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %32, label %30

30:                                               ; preds = %23
  %31 = load i32, i32* @FALSE, align 4
  store i32 %31, i32* %6, align 4
  br label %36

32:                                               ; preds = %23
  %33 = load i32, i32* %13, align 4
  %34 = load i32*, i32** %10, align 8
  store i32 %33, i32* %34, align 4
  %35 = load i32, i32* @TRUE, align 4
  store i32 %35, i32* %6, align 4
  br label %36

36:                                               ; preds = %32, %30, %21
  %37 = load i32, i32* %6, align 4
  ret i32 %37
}

declare dso_local i32 @hexagon_dis_operand(i32*, i32, i32, i32, i8*, i8*, i8**) #1

declare dso_local i32 @hexagon_extract_operand(i32*, i32, i32, i8*, i32*, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
